--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -11,6 +11,9 @@ on:
         description: New version of the package (tag name)
         required: true
         type: string
+  repository_dispatch:
+    types:
+      - package_publish
 
 jobs:
   update:
@@ -25,11 +28,22 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Determine package info
+      id: meta
+      shell: bash
+      run: |
+        if [ "${{ github.event_name }}" = "repository_dispatch" ]; then
+          echo "pkg=${{ github.event.client_payload.package }}" >> "$GITHUB_OUTPUT"
+          echo "ver=${{ github.event.client_payload.version }}" >> "$GITHUB_OUTPUT"
+        else
+          echo "pkg=${{ inputs.package_name }}" >> "$GITHUB_OUTPUT"
+          echo "ver=${{ inputs.version }}" >> "$GITHUB_OUTPUT"
+        fi
     - name: Run Action
       env:
         PKG_ACTION: UPDATE
-        PKG_NAME: ${{ inputs.package_name }}
-        PKG_VERSION: ${{ inputs.version }}
+        PKG_NAME: ${{ steps.meta.outputs.pkg }}
+        PKG_VERSION: ${{ steps.meta.outputs.ver }}
       run: |
         pip install beautifulsoup4
         python .github/actions.py 
@@ -37,8 +51,8 @@ jobs:
       uses: peter-evans/create-pull-request@v3
       with:
         commit-message: ':package: [:robot:] Update package in PyPi index'
-        title: '[🤖] Update `${{ inputs.package_name }}` in PyPi index'
-        body: Automatically generated PR, updating `${{ inputs.package_name }}` in PyPi
+        title: '[🤖] Update `${{ steps.meta.outputs.pkg }}` in PyPi index'
+        body: Automatically generated PR, updating `${{ steps.meta.outputs.pkg }}` in PyPi
           index.
         branch-suffix: random
         delete-branch: true
